Update contact links for all django-owned pages

--- a/outreachyhome/error-templates/500.html
+++ b/outreachyhome/error-templates/500.html
@@ -23,7 +23,7 @@
         <p>If you'd like to give us additional information about what
         you were trying to do when this error occurred, you can
         <a href="https://github.com/sagesharp/outreachy-django-wagtail/issues">file
-        a bug report</a> or <a href="/contact/">contact the Outreachy
+		a bug report</a> or <a href="{% url 'contact-us' %}">contact the Outreachy
         organizers</a>.</p>
     </body>
 </html>
